--- a/src/App.css
+++ b/src/App.css
@@ -4,18 +4,21 @@
 }
 
 main {
-  background-color: gray;
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
 }
 
-section {
+form {
   display: grid;
   gap: 10px;
-  align-content: center;
-  justify-items: center;
-  height: 90vh;
+  width: fit-content;
 }
 
-ol {
-  margin-left: 30px;
+button {
+  width: 100%;
+  padding: 5px 0px;
 }
